--- a/style.css
+++ b/style.css
@@ -6,11 +6,18 @@
     100% {color:purple;}
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    text-align: center;
     font-family: 'Arial';
     background: #5bc0de41;
     margin-top: 50px;
+}
+
+.hero {
+    text-align: center;
 }
 
 h1 {
@@ -19,9 +26,11 @@ h1 {
     animation-duration: 4s;
 }
 
-p {
+p, h3, b{
     /* font-family: "Papyrus", fantasy; */
     font-family: "Gaegu", cursive;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /* ul {
@@ -63,4 +72,36 @@ button {
 
 button:hover {
     background-color: #c4ffe9;
+}
+
+.projects {
+    margin: 50px;
+    font-family: "Gaegu", cursive;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.card {
+    background-color: rgb(249, 242, 250);
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: left;
+    /* transition: transform 0.3 ease; */
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
 }
