--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 body {
     font-family: 'Arial';
     background: #5bc0de41;
-    margin-top: 50px;
+    margin-top: 60px;
 }
 
 .hero {
@@ -26,7 +26,7 @@ h1 {
     animation-duration: 4s;
 }
 
-p, h3, b{
+p, h2, h3, b{
     /* font-family: "Papyrus", fantasy; */
     font-family: "Gaegu", cursive;
     margin-top: 10px;
@@ -75,7 +75,7 @@ button:hover {
 }
 
 .projects {
-    margin: 50px;
+    padding: 50px;
     font-family: "Gaegu", cursive;
 }
 
@@ -104,4 +104,20 @@ button:hover {
 .links {
     display: flex;
     justify-content: space-between;
+}
+
+.links a {
+    padding: 6px 10px;
+    color: blue;
+    border-radius: 5px;
+    transition: background-coolor 0.3s ease;
+}
+
+.links a:hover {
+    background-color: #c4ffe9;
+}
+
+.resources {
+    padding: 50px;
+    font-family: "Gaegu", cursive;
 }
